<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/format_time"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/quakes_feed_significant_day_url"
        android:layout_margin="@dimen/text_margin"
        android:layout_toLeftOf="@+id/magnitude"
        android:layout_toStartOf="@+id/magnitude"
        android:layout_toRightOf="@+id/time"
        android:layout_toEndOf="@+id/time"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/magnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/format_magnitude"
        android:layout_alignBaseline="@+id/time"
        android:layout_alignBottom="@+id/time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>