<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.jsbomb.earthquakelist.ui.BindingAdapters" />

        <variable
            name="context"
            type="android.content.Context" />

        <variable
            name="details"
            type="com.jsbomb.earthquakelist.ui.EarthquakeDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/details_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/label_time"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAlignment="viewEnd"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/coordinates_label"
                app:layout_constraintTop_toTopOf="parent"
                app:timeInLong="@{details.time}"
                tools:text="@string/format_time" />

            <TextView
                android:id="@+id/place_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/time_label"
                android:layout_alignBaseline="@+id/place_view"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/label_place"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_label" />

            <TextView
                android:id="@+id/place_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:background="?android:attr/selectableItemBackground"
                android:text="@{details.place}"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/coordinates_label"
                app:layout_constraintTop_toBottomOf="@id/time_view"
                tools:text="@string/quakes_feed_significant_day_url" />

            <TextView
                android:id="@+id/magnitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/label_magnitude"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/place_view" />

            <TextView
                android:id="@+id/magnitude_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@{BindingAdapters.magnitudeString(context, details.mag)}"
                android:textAlignment="viewEnd"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/coordinates_label"
                app:layout_constraintTop_toBottomOf="@+id/place_view"
                tools:text="@string/format_magnitude" />

            <TextView
                android:id="@+id/coordinates_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/label_coordinates"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/magnitude_label" />

            <TextView
                android:id="@+id/coordinates_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autoLink="map"
                android:background="?android:attr/selectableItemBackground"
                android:text="@{BindingAdapters.longLatString(context, details.longitude, details.latitude)}"
                android:textAlignment="viewEnd"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/coordinates_label"
                app:layout_constraintTop_toBottomOf="@+id/magnitude_view"
                tools:text="@string/format_coordinates" />

            <TextView
                android:id="@+id/tsunami_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/label_tsunami"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coordinates_label" />

            <TextView
                android:id="@+id/tsunami_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@{BindingAdapters.tsunamiString(context, details.tsunami)}"
                android:textAlignment="viewEnd"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/coordinates_label"
                app:layout_constraintTop_toBottomOf="@+id/coordinates_view"
                tools:text="@android:string/ok" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"-->
        <!--            android:id="@+id/adView"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            ads:adSize="BANNER"-->
        <!--            ads:adUnitId="ca-app-pub-7438807169301480/6210564025"-->
        <!--            ads:layout_constraintBottom_toBottomOf="parent"-->
        <!--            ads:layout_constraintEnd_toEndOf="parent"-->
        <!--            ads:layout_constraintStart_toStartOf="parent" /> &lt;!&ndash; test id : ca-app-pub-3940256099942544/6300978111-->
        <!--             my id : ca-app-pub-7438807169301480/6210564025&ndash;&gt;-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
